# BuildSys-automake

./: Makefile  Makefile.am  Makefile.in  Next Steps  README  Summary  config.status  configure  configure.ac  main.c
.deps/: main.Po
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
~/Desktop/: helloworld
