AUTOMAKE_OPTIONS = foreign
bindir = ~/Desktop/
bin_PROGRAMS = helloworld
# PROGRAMS need to be built but scripts and data need not
# bin specifies that the file listed here namely helloworld 
# should be installed to the directory given by bindir


# Some ruby script you wanted to run , so specify rubydir and 
# ruby_DATA as the names of your programs

helloworld_SOURCES = main.c

# helloworld or the name of the program built
